--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,11 +14,19 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out the repository
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
+
+
+      - name: Debug list
+        run: |
+          echo "List all files in the repository:"
+          ls -R
+          echo "List all files in 'frontend/pages':"
+          ls -R frontend/pages
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
