--- a/backend/package.json
+++ b/backend/package.json
@@ -7,13 +7,8 @@
   "type": "module",
   "main": "server.js",
   "keywords": [],
-  "scripts": {
-    "start": "node server.js"
-  },
   "dependencies": {
     "@supabase/supabase-js": "^2.48.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "dotenv": "^16.4.7"
   }
 }
