Add frontend server and login page: update package.json, restructure HTML links, and modify README for new start commands

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "license": "ISC",
+  "license": "MIT",
   "type": "module",
   "main": "server.js",
   "scripts": {
