--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,5 +6,9 @@
   "main": "frontend-server.js",
   "scripts": {
     "start": "node frontend-server.js"
+  },
+  "dependencies": {
+    "chokidar": "^4.0.3",
+    "ws": "^8.18.1"
   }
 }
