Adds development workflow with nodemon and concurrently
- Introduces `nodemon` for automatic backend restarts during development and `concurrently` to run backend and frontend concurrently.
- Introduced a new "dev" script to run backend and frontend concurrently.
- Updates documentation and `package.json` scripts to reflect new workflows and dependencies.
- Includes relevant dependency upgrades and minor adjustments.
- Improves developer experience and efficiency.

--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "frontend"
   ],
   "scripts": {
+    "dev": "concurrently \"npm run dev:backend\" \"npm run start:frontend\"",
     "start:backend": "npm run start --workspace=backend",
+    "dev:backend": "npm run dev --workspace=backend",
     "start:frontend": "npm run start --workspace=frontend"
   },
   "overrides": {
     "whatwg-url": "14.2.0"
+  },
+  "devDependencies": {
+    "concurrently": "^9.1.2"
   }
 }
