--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.1",
+    "busboy": "^1.6.0",
     "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2"
   },
