--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.49.1",
     "busboy": "^1.6.0",
+    "cloudinary": "^2.6.0",
     "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2"
   },
